# pdf-tui

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release-binaries.yml
doc/: architecture.md  cache-and-logs.md  commands.md  configuration.md  controls.md  index.md  keymap.md  quick-start.md  rendering.md  terminal-graphics.md  theme.md  troubleshooting.md  views.md
src/: app.rs  bookmarks.rs  cache.rs  clipboard.rs  config.rs  event.rs  layout.rs  logging.rs  main.rs  metadata.rs  pdf.rs  render.rs  search.rs  selection.rs  terminal.rs  ui.rs
src/app/: bookmark_state.rs  input.rs  mod.rs  navigation.rs  progress.rs  search_jump.rs  search_state.rs  selection_geometry.rs  selection_state.rs
src/config/: behavior.rs  keymap.rs  layout.rs  render.rs  theme.rs
src/pdf/: document.rs  mod.rs  raster.rs  store.rs
src/pdf/raster/: backend.rs  crop.rs  file_cache.rs  slice.rs
src/render/: cache_file.rs  chafa.rs  driver.rs  key.rs  memory.rs
src/ui/: bookmarks_view.rs  footer.rs  grid.rs  metadata_view.rs  modal.rs  page.rs  page_overlay.rs  preload.rs  scroll.rs  search_view.rs  selection_view.rs
